# apiforge

./: .gitignore  Contributing.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
apiforge/: __init__.py
apiforge/cli/: __init__.py  main.py
apiforge/core/: __init__.py  client.py  config.py  credentials.py  discovery.py  exceptions.py  metadata.py
apiforge/generators/: __init__.py
apiforge/mcp/: __init__.py  adapter.py  generator.py
apiforge/plugins/: __init__.py  base.py
apiforge/plugins/discord/: __init__.py
apiforge/plugins/github/: __init__.py
apiforge/plugins/notion/: __init__.py
docs/: Architecture.md
tests/: conftest.py
tests/test_core/: test_client.py  test_credentials.py  test_discovery.py
tests/test_plugins/: test_first_party.py
